--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 			  
 		  }
 		  #table4{
-			  background-color:black;
+			  background-color:rgba(0,0,0);
 			  color:white;
 		  }
 	  </style>
@@ -45,9 +45,9 @@
 					<tr>
 						<td>
 						<ul>
-							<li>List item</li>
-							<li>List item</li>
-							<li>List item</li>
+							<li>ball</li>
+							<li>bat</li>
+							<li>arrow</li>
 						</ul>
 						</td>
 					</tr>
@@ -72,8 +72,8 @@
 					<tr>
 						<th>Nested Table 4</th>
 					</tr>
-					<tr id="table4">
-						<td >HTML</td>
+					<tr >
+						<td id="table4">HTML</td>
 					</tr>
 				</table>
 			</th>
