--- a/main.html
+++ b/main.html
@@ -23,12 +23,12 @@
 			<th>
 				<table >
 					<tr>
-						<th colspan="2">Nested Table 2</th>
+						<td colspan="2">Nested Table 2</td>
 					</tr>
-					<tr>
+					
 						<th>Column 1</th>
 						<th>Column 2</th>
-					</tr>
+					
 					<tr>
 						<td>abc</td>
 						<td>def</td>
@@ -40,14 +40,14 @@
 			<th>
 				<table>
 					<tr>
-						<th colspan="2">Nested Table 1</th>
+						<td colspan="2">Nested Table 1</td>
 					</tr>
 					<tr>
 						<td>
 						<ul>
-							<li>ball</li>
-							<li>bat</li>
-							<li>arrow</li>
+							<li>List item</li>
+							<li>List item</li>
+							<li>List item</li>
 						</ul>
 						</td>
 					</tr>
@@ -58,7 +58,7 @@
 			<th>
 			<table>
 				<tr>
-					<th colspan="2">Nested Table 3</th>
+					<td colspan="2">Nested Table 3</td>
 				</tr>
 				<tr>
 					<td><a href="#">Nested Table</a></td>
